# fx_draw

./: .gitignore  CMakeLists.txt  README.md
src/fx_draw/: fx_draw.cpp  fx_draw.hpp
src/fx_draw/components/: fading_filled_circle.hpp  fx_timer.hpp  simple_circle.hpp  simple_filled_circle.hpp  simple_filled_rectangle.hpp  simple_line.hpp  simple_rectangle.hpp
src/fx_draw/components/serialize/: fx_draw.hpp
src/fx_draw/opengl/render_tasks/: fx_renderer.cpp  fx_renderer.hpp
src/fx_draw/render_tasks/: fx_renderer.cpp  fx_renderer.hpp
src/fx_draw/systems/: fx_timer.cpp  fx_timer.hpp
